--- a/index.html
+++ b/index.html
@@ -19,30 +19,30 @@
             </div>
 
             <div class = "rows">
-                <button class="buttons">1</button>
-                <button class="buttons">2</button>
-                <button class="buttons">3</button>
+                <button class="number buttons">1</button>
+                <button class="number buttons">2</button>
+                <button class="number buttons">3</button>
                 <button class="operator buttons">+</button>
             </div>
 
             <div class = "rows">
-                <button class="buttons">4</button>
-                <button class="buttons">5</button>
-                <button class="buttons">6</button>
+                <button class="number buttons">4</button>
+                <button class="number buttons">5</button>
+                <button class="number buttons">6</button>
                 <button class="operator buttons">-</button>
             </div>
 
             <div class = "rows">
-                <button class="buttons">7</button>
-                <button class="buttons">8</button>
-                <button class="buttons">9</button>
+                <button class="number buttons">7</button>
+                <button class="number buttons">8</button>
+                <button class="number buttons">9</button>
                 <button class="operator buttons">x</button>
             </div>
 
             <div class = "rows">
-                <button class="operator buttons">.</button>
-                <button class="buttons">0</button>
-                <button class="operator buttons">=</button>
+                <button class="point number buttons">.</button>
+                <button class="number buttons">0</button>
+                <button class="equal buttons">=</button>
                 <button class="operator buttons">/</button>
             </div>
         </div>
