first working calculator

--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
             </div>
 
             <div class = "rows">
-                <button class="point number buttons">.</button>
+                <button class="point buttons">.</button>
                 <button class="number buttons">0</button>
                 <button class="equal buttons">=</button>
                 <button class="operator buttons">/</button>
