--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <body>
 
         <div class = "calculator-body">
-            <div class="screen rows">0</div>
+            <div class="screen rows"></div>
 
             <div id = "clear-delete" class = "rows">
                 <button id="clear" class="buttons">Clear</button>
