--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
                 <button class="number buttons">7</button>
                 <button class="number buttons">8</button>
                 <button class="number buttons">9</button>
-                <button class="operator buttons">x</button>
+                <button class="operator buttons">*</button>
             </div>
 
             <div class = "rows">
